--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -236,10 +236,11 @@
             <button type="button" class="btn btn-primary btn-md" id="add-btn"><span class="glyphicon glyphicon-fire"></span> Submit</button>
         </div>
 
+		<div id="empty"></div>
         <a href="/api/friends" id="apiSearch">API Friends</a>
 
 
-	<script>
+<script>
 	$("#apiSearch").on("click", function(event){
 		$.get('/api/friends', function (req, res) {
 		console.log(friendsData);
@@ -249,7 +250,6 @@
 	$("#add-btn").on("click", function(event) {
     event.preventDefault();
     
-    // possibly use a var map = {}?? for scores?
     var input = [];
     var scoreInput = [];
     input = $(':checkbox:checked');
@@ -269,17 +269,35 @@ console.log(newFriend);
     $.post(currentURL + "/api/friends", newFriend,
         function(data) {
 
-            // Clear the form when submitting
-            $("#name").val("");
-            $("#photo").val("");
-            $(".scores").val("");
         });
-
+    $.get("/api/friends", function(data) {
+     
+        $("#empty").append("<h2>" + data + "</h2>");
+    });
 });
 
 $('input[type="checkbox"]').on('change', function() {
     $('input[name="' + this.name + '"]').not(this).prop('checked', false);
 });
+
+// function runFriendQuery() {
+
+//       var currentURL = window.location.origin;
+
+//       // The AJAX function uses the URL of our API to GET the data associated with it (initially set to localhost)
+//       $.ajax({ url: currentURL + "/api/friends", method: "GET" })
+//       .done(function(data) {
+
+//         // Here we are logging the URL so we have access to it for troubleshooting
+//         console.log("------------------------------------");
+//         console.log("URL: " + currentURL + "/api/friends");
+//         console.log("------------------------------------");
+
+//         // Here we then log the NYTData to console, where it will show up as an object.
+//         console.log(data);
+//         console.log("------------------------------------");
+//     });
+// }
 
 	</script>
 </body>
